# OOP2024

./: CMakeLists.txt  README.md  playground.cpp
en/ex1/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
en/ex10/: task1.cpp  task2.cpp
en/ex11/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
en/ex12/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
en/ex13/: task1.cpp  task2.cpp
en/ex2/: task1.cpp  task2.cpp  task3.cpp
en/ex4/: task1.cpp  task2.cpp  task3.cpp
en/ex5/: task1.cpp  task2.cpp  task3.cpp
en/ex6/: README.md  task1.cpp
en/ex7/: task1.cpp  task2.cpp  task3.cpp
en/ex8/: task1.cpp  task2.cpp  task3.cpp
en/ex9/: task1.cpp  task2.cpp
mk/av1/: README.md  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
mk/av10/: zad1.cpp  zad3.cpp
mk/av12/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
mk/av13/: zad1.cpp  zad2.cpp
mk/av2/: zad1.cpp  zad2.cpp  zad3.cpp
mk/av3/: zad1.cpp  zad3.cpp
mk/av4/: zad1.cpp  zad2.cpp  zad3.cpp
mk/av5/: zad1.cpp  zad2.cpp  zad3.cpp
mk/av6/: README.md  zad1.cpp
mk/av9/: zad2.cpp
